# fenestra

./: .gitignore  AGENTS.md  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml  llms.txt
fenestra/: Cargo.toml
fenestra-a2ui/: Cargo.toml
fenestra-a2ui/src/: catalog.rs  functions.rs  lib.rs  messages.rs  render.rs  surface.rs
fenestra-a2ui/tests/: conformance.rs  robustness.rs
fenestra-a2ui/tests/fixtures/: 00_complex-layout.json  00_interactive-button.json  00_row-layout.json  00_simple-login-form.json  00_simple-text.json  NOTICE
fenestra-anim/: CHANGELOG.md  Cargo.toml  README.md
fenestra-anim/src/: bezier.rs  easing.rs  interpolate.rs  lib.rs  rational.rs  spring.rs  timeline.rs  track.rs
fenestra-anim/tests/: bezier.proptest-regressions  bezier.rs  rational.rs  serde_feature.rs  spring.rs  track.rs
fenestra-charts/: Cargo.toml
fenestra-charts/src/: lib.rs
fenestra-charts/tests/: charts_golden.rs
fenestra-cli/: Cargo.toml
fenestra-cli/src/: lib.rs
fenestra-cli/tests/: cli.rs
fenestra-core/: Cargo.toml
fenestra-core/src/: anim.rs  apca.rs  app.rs  breakpoints.rs  canvas.rs  children.rs  chrome.rs  clipboard.rs  cmd.rs  effects.rs  element.rs  events.rs  frame.rs  frame_state.rs  ghost.rs  grid.rs  i18n.rs  id.rs  input.rs  layout.rs  lib.rs  menu.rs  nav.rs  optical.rs  paint.rs  paint_plan.rs  painter.rs  proxy.rs  query.rs  style.rs  surface.rs  text.rs  theme.rs  tokens.rs
fenestra-core/tests/: commands.rs  compose.rs  contrast.rs  drag_end.rs  grid.rs  hardening.rs  ime_area.rs  inspector.rs  legibility.rs  motion.rs  motion_shared.rs  perf_gate.rs  properties.rs  ring_test.rs  rtl_dynamic_type.rs  scroll_2d.rs  scrolling.rs  sticky.rs  swipe.rs  theme_spec.rs  theme_tokens.rs  virtualization.rs  windows.rs
fenestra-core/tests/snapshots/: inspector__access_yaml.snap  inspector__debug_tree.snap  theme_tokens__static_tokens.snap  theme_tokens__theme_dark_tokens.snap  theme_tokens__theme_light_tokens.snap
fenestra-describe/: Cargo.toml  README.md
fenestra-describe/src/: color.rs  dto.rs  emit.rs  error.rs  format.rs  inspect.rs  lib.rs  parse.rs  state.rs  vocabulary.rs
fenestra-describe/tests/: aria_invalid.rs  charts_markdown.rs  emit_roundtrip.rs  golden.rs  grid_vocab.rs  image_budget_security.rs  inspect.rs  new_widgets.rs  parse.rs  schema.rs  vocab_completeness_r3.rs  vocabulary.rs
fenestra-kit/: Cargo.toml  LICENSE-LUCIDE.txt
fenestra-kit/src/: demo.rs  font_features.rs  gallery.rs  icons.rs  lib.rs  specimen.rs  type_specimen.rs
fenestra-kit/src/icons/: lucide.rs
fenestra-kit/src/widgets/: button.rs  checkbox.rs  color_picker.rs  combobox.rs  data_table.rs  date_picker.rs  disclosure.rs  display.rs  field.rs  glass.rs  kbd.rs  menu.rs  mod.rs  multi_select.rs  navigation.rs  overlay_widgets.rs  palette.rs  panes.rs  radio.rs  segmented.rs  select.rs  skeleton.rs  slider.rs  spin_button.rs  switch.rs  tag_input.rs  text_area.rs  text_input.rs  toast.rs  toolbar.rs  tree.rs  validation.rs  virtual_list.rs
fenestra-kit/tests/: a11y_state_test.rs  access_test.rs  adornments_golden.rs  autofocus_test.rs  backdrop_blur_golden.rs  children_test.rs  color_picker_golden.rs  color_picker_test.rs  combobox_keyboard_golden.rs  data_table_features_golden.rs  data_table_features_test.rs  data_table_interaction_test.rs  data_table_matured_golden.rs  date_picker_test.rs  density_golden.rs  disclosure_golden.rs  dnd_test.rs  drawer_golden.rs  effects_golden.rs  feedback_test.rs  field_golden.rs  gallery_goldens.rs  glass_golden.rs  gradient_shapes_golden.rs  grid_areas_golden.rs  grid_golden.rs  hardening.rs  harness_test.rs  input_depth.rs  interaction.rs  kit2_test.rs  layout_goldens.rs  lucide_test.rs  menu_rich_golden.rs  menu_submenu_golden.rs  menu_test.rs  menubar_golden.rs  meter_golden.rs  motion_test.rs  multi_select_golden.rs  (+25 more)
fenestra-kit/tests/snapshots/: layout_goldens__holy_grail_layout_tree.snap
fenestra-looks/: Cargo.toml
fenestra-looks/src/: lib.rs
fenestra-looks/tests/: contrast.rs  looks_golden.rs  optical_golden.rs
fenestra-markdown/: Cargo.toml
fenestra-markdown/src/: lib.rs
fenestra-markdown/tests/: markdown_test.rs
fenestra-mcp/: Cargo.toml  README.md  server.json
fenestra-mcp/src/: content.rs  lib.rs  main.rs  server.rs
fenestra-motion/: Cargo.toml  README.md
fenestra-motion/examples/: chart_race.rs  lower_third.ron  lower_third.rs  title_stagger.rs
fenestra-motion/src/: clip.rs  color_track.rs  composition.rs  data.rs  demos.rs  easing.rs  lib.rs  render.rs  sample.rs  timeline.rs  verify.rs
fenestra-motion/tests/: cli.rs  composition.rs  data.rs  demos.rs  golden.rs  render.rs  tracks.rs  verify.rs
fenestra-render/: Cargo.toml  README.md
fenestra-render/src/: described_app.rs  engine.rs  lib.rs  preview_app.rs  scenario.rs  theme_input.rs
fenestra-render/tests/: cli.rs  engine.rs  scenario.rs
fenestra-shell/: Cargo.toml
fenestra-shell/src/: access.rs  blur.rs  element_render.rs  embed.rs  harness.rs  headless.rs  lib.rs  multi_pass.rs  os_clipboard.rs  reduce_motion.rs  scenario.rs  synthetic.rs  testing.rs  web_clipboard.rs  window.rs
fenestra-shell/tests/: commands.rs  effects_test.rs  embedded_test.rs  emoji_test.rs  filmstrip_test.rs  font_fallback.rs  hardening.rs  headless_smoke.rs  hidpi_golden.rs  image_golden.rs  keyframes_test.rs  no_device.rs  render_over.rs  responsive_layout.rs  rich_text_test.rs  scenario_test.rs  snapshot_artifacts.rs
fenestra/examples/: agent_dashboard.rs  bench.rs  clock.rs  counter.rs  dashboard.rs  embedded.rs  file_dialog.rs  gallery.rs  hello.rs  holy_grail.rs  http_fetch.rs  liquid_glass.rs  looks.rs  native_menu.rs  nested_scroll.rs  poster.rs  specimen.rs  toasts.rs  verify.rs  web_demo.rs  windows.rs
fenestra/src/: lib.rs
fenestra/tests/: ai_chat_golden.rs  font_features_golden.rs  poster_golden.rs  text_wrap_golden.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode.rs  description_parse.rs  layout.rs  layout_plan.rs  text_input.rs  theme_spec.rs
(+57 files in other folders)
