[workspace]
resolver = "3"
members = ["fenestra", "fenestra-core", "fenestra-shell", "fenestra-kit", "fenestra-charts", "fenestra-markdown", "fenestra-looks", "fenestra-describe", "fenestra-render", "fenestra-mcp"]
exclude = ["fuzz"]

[workspace.package]
version = "0.30.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/richer-richard/fenestra"
keywords = ["gui", "ui", "graphics"]
categories = ["gui"]

# No crate in this workspace uses unsafe code; keep it that way.
[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.dependencies]
fenestra-core = { version = "0.30.0", path = "fenestra-core" }
fenestra-shell = { version = "0.30.0", path = "fenestra-shell" }
fenestra-kit = { version = "0.30.0", path = "fenestra-kit" }
fenestra-describe = { version = "0.30.0", path = "fenestra-describe" }
fenestra-render = { version = "0.30.0", path = "fenestra-render" }

winit = "0.30.13"
wgpu = "29.0.3"
vello = "0.9.0"
kurbo = "0.13.1"
peniko = "0.6.1"
parley = "0.10.0"
fontique = "0.10.0"
taffy = "0.10.1"
color = "0.3.3"
arboard = "3.6.1"
accesskit = "0.24.0"
accesskit_winit = "0.33.0"
image = { version = "0.25.10", default-features = false, features = ["png"] }
insta = "1.47.2"
proptest = "1.11"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
pollster = "0.4.0"
wasm-bindgen-futures = "0.4.73"
rfd = "0.17.2"
web-time = "1.1.0"

# vello and wgpu are unusably slow without optimization; keep our own crates
# fast to compile but optimize dependencies even in dev builds.
[profile.dev.package."*"]
opt-level = 2
