[package]
name = "fenestra-a2ui"
version = "0.40.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
description = "A native Rust renderer for A2UI (Agent-to-UI) v0.9: agents send declarative JSON surfaces, fenestra renders them — verifiable headlessly."
repository = "https://github.com/richer-richard/fenestra"

[lints]
workspace = true

[dependencies]
fenestra-core.workspace = true
fenestra-kit.workspace = true
fenestra-markdown.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
fenestra-shell.workspace = true
