[package]
name = "fenestra-describe"
description = "Serialized UI for the fenestra GUI framework: parse JSON to a renderable, verifiable tree"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
fenestra-core.workspace = true
fenestra-kit.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
fenestra-shell.workspace = true
insta.workspace = true
