[package]
name = "fenestra-describe"
description = "Serialized UI for the fenestra GUI framework: parse JSON to a renderable, verifiable tree"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
fenestra-core.workspace = true
fenestra-kit.workspace = true
image.workspace = true
regex = "1.12.4"
schemars = "1.2.1"
serde.workspace = true
serde_json.workspace = true
serde_path_to_error = "0.1.20"

[dev-dependencies]
fenestra-shell.workspace = true
insta.workspace = true
