[package]
name = "fenestra-mcp"
description = "Model Context Protocol server exposing the fenestra GUI framework to AI agents"
# Versioned independently of the workspace (see ARCHITECTURE.md, 2026-07-10):
# publishing to the MCP Registry needs a visible-markdown ownership marker in
# the published README, which is a metadata-only change that shouldn't force
# a workspace-wide bump.
version = "0.40.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
fenestra-core.workspace = true
fenestra-render.workspace = true
fenestra-describe.workspace = true
serde.workspace = true
serde_json.workspace = true
image.workspace = true
# rmcp 1.7.0: `macros` + `server` are default; add stdio transport. schemars,
# tokio, and base64 versions are pinned to what rmcp 1.7.0 resolves, so they
# unify with its re-exports. (Resolved at integration, not from memory.)
rmcp = { version = "1.7.0", features = ["transport-io"] }
schemars = "1.2.1"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
base64 = "0.22.1"
