[package]
name = "fenestra-render"
description = "Command-line renderer and verification harness for the fenestra GUI framework"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
fenestra-core.workspace = true
fenestra-describe.workspace = true
fenestra-shell.workspace = true
# fenestra-kit: only for `preview_app`'s error callout, so the live-reload
# window reuses the kit's themed status styling instead of hand-rolling it.
fenestra-kit.workspace = true
serde.workspace = true
serde_json.workspace = true
image.workspace = true
clap = { version = "4.6.1", features = ["derive"] }
# clap (CLI binary) is resolved to its latest 4.x at integration in Phase 4
# (Task 17), never pinned from memory.
