[package]
name = "fenestra"
description = "A pure-Rust native GUI framework with web-grade aesthetics: OKLCH themes, soft shadows, flexbox/grid, and headless PNG rendering"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../README.md"
# Poster fonts and goldens stay out of the published package.
exclude = ["examples/assets", "tests/snapshots"]

[lints]
workspace = true

[dependencies]
fenestra-core.workspace = true
fenestra-kit.workspace = true
fenestra-shell.workspace = true

[dev-dependencies]
image.workspace = true
# Examples only (the `looks` showcase); a dev-dependency, so it is not a
# runtime dependency of the published facade. Versioned (not path-only) so it
# isn't a wildcard dependency.
fenestra-looks = { path = "../fenestra-looks", version = "0.36.0" }

# Native-only example deps (file dialogs).
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
rfd.workspace = true
pollster.workspace = true
