[package]
name = "fenestra"
description = "A pure-Rust native GUI framework with web-grade aesthetics: OKLCH themes, soft shadows, flexbox/grid, and headless PNG rendering"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../README.md"
# Poster fonts and goldens stay out of the published package.
exclude = ["examples/assets", "tests/snapshots"]

[lints]
workspace = true

[dependencies]
fenestra-core.workspace = true
fenestra-kit.workspace = true
fenestra-shell.workspace = true

[dev-dependencies]
image.workspace = true
serde_json.workspace = true
# Examples only (the `looks` showcase); a dev-dependency, so it is not a
# runtime dependency of the published facade. Versioned (not path-only) so it
# isn't a wildcard dependency.
fenestra-looks = { path = "../fenestra-looks", version = "0.40.0" }

# Native-only example deps. Kept out of wasm so the web_demo wasm build never
# tries to compile the native-only render/shell stack.
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
rfd.workspace = true
pollster.workspace = true
# The `http_fetch` example's blocking HTTP client (run from a `Cmd::task`
# worker thread). Dev-only + native-only.
ureq = "3.3.0"
# The `verify` example authors a UI as `fenestra/1` JSON and verifies it headlessly
# (GPU), reaching past the facade to describe (windowless inspection) and render
# (headless pixels). Dev-only + native-only, so neither is a runtime dependency of
# the facade nor part of the wasm build.
fenestra-describe.workspace = true
fenestra-render.workspace = true
